--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Google Books search application with login"
+      content="Anim-Aid is a non-profit organization that helps animals in need."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
