removed old reference

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Google Books search application with login"
+      content="Anim-Aid Humane Society"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
